# cd13764-AI-Agents-with-LangChain-and-LangGraph-exercises

./: .gitignore  pyproject.toml
L3_Agentic_Workflows_with_LangGraph/exercises/01_router/: L3_starter_exercise_01_router.ipynb
L3_Agentic_Workflows_with_LangGraph/exercises/02_text2sql/: L3_starter_exercise_02_text2sql.ipynb
L4_Creating_a_Knowledge_Base_Agent/exercises/01_kb_agent/: L4_starter_exercise_01_kb_agent.ipynb
